feat(discussions): implement discussion use-cases
